@@ -20,9 +20,12 @@ my $pihole = WWW::PiHole -> new;
 # p $pihole -> recent;
 
 # p $pihole -> add_dns( 'custom.local' , '192.168.1.1' );
-# p $pihole -> remove_dns( 'custom2.local' , '192.168.1.1' );
+# p $pihole -> remove_dns( 'custom.local' , '192.168.1.1' );
+# p $pihole -> get_dns; # array of 2-element arrays
+# # No comments allowed in the hostfile
 
 # p $pihole -> add_cname( 'redirect.this' , 'www.example.com' );
 # p $pihole -> remove_cname( 'redirect.this' , 'www.example.com' );
+# p $pihole -> get_cname; # array of 2-element arrays
 
-say $pihole -> version( 'latest1' ); # Modes: 'update', 'current', 'latest', 'branch'
+say $pihole -> version( 'latest' ); # Modes: 'update', 'current', 'latest', 'branch'
